// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InArticlePuff should render optional fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-EHOje hxyorB"
  >
    <div
      class="sc-bZQynM bcIvmR"
    >
      <a
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-bdVaJa eDCunu"
        >
          <img
            src="https://via.placeholder.com/150"
          />
        </div>
      </a>
    </div>
    <div
      class="sc-gzVnrw kKiGJk"
    >
      <div>
        <div
          class="sc-htoDjs wogdI"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-dnqmqq idHiiA"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
        <div
          class="sc-iwsKbI bMDHmH"
        >
          Enter your postcode to find your nearest centre
        </div>
      </div>
      <a
        class="sc-bwzfXH gpLJAb"
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-htpNat irNLqr"
        >
          Read the full article
        </div>
        <svg
          class="iconForwardChevron"
          height="18"
          width="8"
        >
          IconForwardChevron
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render required fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-EHOje hxyorB"
  >
    <div
      class="sc-gzVnrw gzDDYI"
    >
      <div>
        <div
          class="sc-htoDjs eVcZJA"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-dnqmqq dPtcG"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
      </div>
      <a
        class="sc-bwzfXH gpLJAb"
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-htpNat irNLqr"
        >
          Read more
        </div>
        <svg
          class="iconForwardChevron"
          height="18"
          width="8"
        >
          IconForwardChevron
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render the initial loading state correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb egvpqE"
  >
    <div>
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;
